Changelog
---------

Version 1.0dev
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Expression results are now validated for XML correctness when the
  compiler is running in debug-mode. [malthe]

- Preserve CDATA sections. [malthe]

- The Genshi interpolation operator ${} should not have its result
  escaped when used in the text or tail regions. [malthe]

- Preliminary support for using ``xml.etree`` as fallback for
  ``lxml.etree``. [malthe]

- Fixed edge case bug where inserting both a numeric entity and a literal 
  set of unicode bytes into the same document would cause a
  UnicodeDecodeError. See also 
  http://groups.google.com/group/z3c_pt/browse_thread/thread/aea963d25a1778d0?hl=en
 [chrism]

- Static attributes are now properly overriden by py:attr-attributes.
  [malthe]
  
- String-expressions may now contain semi-colons using a double
  semi-colon literal (;;). [malthe]

- Get rid of package-relative magic in constructor of BaseTemplateFile
  in favor of just requiring an absolute path or a path relative
  to getcwd(). Rationale: it didn't work when called from __main__
  when the template was relative to getcwd(), which is the 99% case
  for people first trying it out. [chrism]

- Added support for METAL.
  [malthe]

- Add a TemplateLoader class to have a convenient method to instantiate
  templates. This is similar to the template loaders from other template
  toolkits and makes integration with Pylons a lot simpler.
  [wichert]

- Switch from hardcoding all options in config.py to using parameters
  for the template. This also allows us to use the more logical
  auto_reload flag instead of reusing PROD_MODE, which is also used
  for other purposes.
  [wichert]

- Treat comments, processing instructions, and named entities in the
  source template as "literals", which will be rendered into the
  output unchanged. [chrism]

Version 0.9 - August 7, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for Genshi-templates.
  [malthe]
